# aos_core_zephyr

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  HOWTO.md  Kconfig  README.md  TODO.md  prj.conf  sonar-project.properties  suppressions.txt  west.yml
.github/workflows/: build_test.yaml  check_format.yaml  clang_format.yaml  mend_check.conf  mend_check.yaml  static_analysis.yaml
CMakeModules/: FindCoreAPI.cmake
boards/: native_posix.conf  native_posix_64.conf  qemu_cortex_a53.conf  qemu_cortex_a53.overlay  qemu_x86_64.conf  rcar_h3ulcb_ca57.conf  rcar_h3ulcb_ca57.overlay  rcar_salvator_xs_m3.conf  rcar_salvator_xs_m3.overlay  rcar_salvator_xs_m3_2x4g.conf  rcar_salvator_xs_m3_2x4g.overlay  rcar_spider.conf  rcar_spider.overlay  rcar_spider_ca55.conf  rcar_spider_ca55.overlay  rpi_5.conf  rpi_5.overlay  xenvm-qemu.conf  xenvm-qemu.overlay  xenvm.conf  xenvm.overlay  xenvm_gicv3.conf  xenvm_gicv3.overlay
cmake/: FindCoreAPI.cmake  GenerateVersion.cmake
dts/bindings/: xen,domu-vbd.yaml  xen,domu-vif.yaml  xen,domu.yaml
include/: app.hpp  logger.hpp
misc/: softhsm2.conf
mocks/: aoscoreconfig.hpp
mocks/include/: domain.h  vch.h  xen_console.h  xen_dom_mgmt.h  xrun.h  xstat.h
mocks/vch/: vch.cpp
mocks/xenlib/: xenconsole.cpp  xendommgmt.cpp
mocks/xrun/: xrun.cpp
mocks/xstat/: xstat.cpp
prebuilt/: helloworld_xen-arm64  ipl.dtb  ipl_gen3.dtb  ipl_h3ulcb.dtb  ipl_spider.dtb  unikernel.dtb
scripts/: fix_dtb.sh  gen_pb_options.py  gen_ta_src.py  gicv2.tmpl  gicv3.tmpl  prepare_ta.sh  pyproject.toml  xen_gicv2.dts  xen_gicv3.dts
src/: aoscoreconfig.hpp  aosmbedtlsconfig.h  domain_bins.S  domd_cfg_gen3.c  domd_cfg_spider.c  main.c  main.cpp  version.hpp.in
src/app/: app.cpp  app.hpp  log.hpp
src/bsp/: mount.c  mount.h  mount_fatfs.c  mount_littlefs.c  reboot.c  reboot.h
src/clocksync/: clocksync.cpp  clocksync.hpp  log.hpp
src/cmclient/: cmclient.cpp  cmclient.hpp  cmclient_test.cpp  log.hpp
src/communication/: channel.cpp  channel.hpp  channelmanager.cpp  channelmanager.hpp  channeltype.hpp  cmclient.cpp  cmclient.hpp  commchannel.hpp  communication.cpp  communication.hpp  communicationmanager.cpp  communicationmanager.hpp  iamserver.cpp  iamserver.hpp  log.hpp  messagehandler.hpp  messagesender.hpp  pbhandler.cpp  pbhandler.hpp  pipe.cpp  pipe.hpp  socket.cpp  socket.hpp  tlschannel.cpp  tlschannel.hpp  tlsvchannel.cpp  tlsvchannel.hpp  transport.hpp  types.hpp  vchannel.cpp  vchannel.hpp  xenvchan.cpp  xenvchan.hpp
src/cryptutils/: cryptutils.cpp  cryptutils.hpp  mbedtls_config.h
src/domains/: dom_runner.c  dom_runner.h  domain_bins.S
src/downloader/: downloader.cpp  downloader.hpp  log.hpp
src/iamclient/: iamclient.cpp  iamclient.hpp  log.hpp
src/image/: imagehandler.cpp  imagehandler.hpp  log.hpp
src/launcher/: runtime.hpp
src/logger/: fsbackend.cpp  fsbackend.hpp  logger.cpp  logger.hpp  types.hpp
src/logprovider/: fslogreader.cpp  fslogreader.hpp  log.hpp  logprovider.cpp  logprovider.hpp
src/monitoring/: log.hpp  resourceusageprovider.cpp  resourceusageprovider.hpp
src/networkmanager/: networkmanager.hpp
src/nodeinfoprovider/: log.hpp  nodeinfoprovider.cpp  nodeinfoprovider.hpp
src/ocispec/: log.hpp  ocijsonspec.hpp  ocispec.cpp  ocispec.hpp
src/provisioning/: log.hpp  provisioning.cpp  provisioning.hpp
src/provisionmanager/: log.hpp  provisionmanagercallback.cpp  provisionmanagercallback.hpp
src/resourcemanager/: log.hpp  resourcemanager.cpp  resourcemanager.hpp
src/resourceusageprovider/: log.hpp  resourceusageprovider.cpp  resourceusageprovider.hpp
src/rootca/: rootca.S
src/runner/: consolereader.cpp  consolereader.hpp  log.hpp  runner.cpp  runner.hpp
src/smclient/: log.hpp  openhandler.cpp  openhandler.hpp  smclient.cpp  smclient.hpp
src/storage/: filestorage.hpp  log.hpp  storage.cpp  storage.hpp
src/utils/: checksum.cpp  checksum.hpp  fsplatform.cpp  fsplatform.hpp  new.hpp  partition.cpp  partition.hpp  pbconvert.hpp  utils.cpp  utils.hpp
src/vchan/: tlsvchan.cpp  tlsvchan.hpp  vchan.cpp  vchan.hpp
tests/clocksync/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/clocksync/src/: main.cpp
tests/clocksync/src/mocks/: sendermock.hpp
tests/clocksync/src/stubs/: senderstub.hpp  subscriberstub.hpp
tests/cmclient/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/cmclient/src/: main.cpp  mockclocksync.cpp  mockclocksync.hpp  mockconnectionsubscriber.cpp  mockconnectionsubscriber.hpp  mockdownloader.cpp  mockdownloader.hpp  mocklauncher.cpp  mocklauncher.hpp  mockresourcemonitor.cpp  mockresourcemonitor.hpp
tests/communication/: CMakeLists.txt  Kconfig  mbedtlsconfig.h  prj.conf  testcase.yaml
tests/communication/src/: channelmanager.cpp  cmclient.cpp  iamserver.cpp  main.cpp  mbedtlsconfig.h  testmbedtlsconfig.h  tlschannel.cpp  utils.cpp  utils.hpp
tests/communication/src/mocks/: certhandlermock.hpp  certloadermock.hpp  clocksyncmock.hpp  commchannelmock.hpp  connectionsubscribermock.hpp  downloadermock.hpp  launchermock.hpp  monitoringmock.hpp  provisioningmock.hpp  resourcemanagermock.hpp  resourcemonitormock.hpp
tests/communication/src/stubs/: certhandlerstub.hpp  certloaderstub.hpp  clocksyncstub.hpp  commchannelstub.hpp  downloaderstub.hpp  launcherstub.hpp  monitoringstub.hpp  provisioningstub.hpp  resourcemanagerstub.hpp  rsaprivatekey.hpp  transportstub.hpp
tests/cryptutils/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cryptutils/src/: main.cpp
tests/downloader/: CMakeLists.txt  prj.conf  testcase.yaml
tests/downloader/src/: main.cpp
tests/iamclient/: CMakeLists.txt  Kconfig  testcase.yaml
tests/iamclient/src/: main.cpp
tests/iamclient/src/stubs/: clocksyncstub.hpp  nodeinfoproviderstub.hpp  provisionmanagerstub.hpp
tests/logger/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/logprovider/: CMakeLists.txt  Kconfig  testcase.yaml
tests/ocispec/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/ocispec/src/: main.cpp
tests/storage/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/storage/src/: main.cpp
(+52 files in other folders)
